bluejay-validator/tests/snapshots/executable_integration_test__error@operation_type_is_defined.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/operation_type_is_defined.graphql
---
Error: Schema does not define a mutation root
   ╭─[operation_type_is_defined.graphql:1:1]
   │
 1 │ mutation {
   │ ────┬───  
   │     ╰───── Schema does not define a mutation root
───╯
